editor visibility issue fixed

--- a/css/style.css
+++ b/css/style.css
@@ -4493,17 +4493,25 @@ h3.login-img-head-container {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #ffffff; /* or use a light shade like #f0f0f0 */
+  background: #ffffff;
   display: flex;
   align-items: center;
   justify-content: center;
   z-index: 9999;
 }
 
-.loader-spinner {
+/* .loader-spinner {
   width: 60px;
   height: 60px;
   border: 6px solid #ccc;
+  border-top-color: #007bff;
+  border-radius: 50%;
+  animation: spin 0.8s linear infinite;
+} */
+.loader-spinner {
+  width: 50px;
+  height: 50px;
+  border: 5px solid #ccc;
   border-top-color: #007bff;
   border-radius: 50%;
   animation: spin 0.8s linear infinite;
